--- a/SAA 101-200.md
+++ b/SAA 101-200.md
@@ -464,3 +464,86 @@ Which combination of configuration options will meet these requirements? (Choose
 - B. Configure a VPC with two private subnets and two NAT gateways across two Availability Zones. Deploy an Application Load Balancer in the private subnets.
 - C. Use an Auto Scaling group to launch the EC2 instances in public subnets across two Availability Zones. Deploy an RDS Multi-AZ DB instance in private subnets.
 - D. Configure a VPC with one public subnet, one private subnet, and two NAT gateways across two Availability Zones. Deploy an Application Load Balancer in the public subnet.  
+
+[[VPC & Subnet]] 
+
+AB
+放在public还是private subnet得看是否直接接受来自Internet的访问
+
+### 126
+
+A solutions architect needs to implement a solution to reduce a company's storage costs. All the company's data is in the Amazon S3 Standard storage class. The company must keep all data for at least 25 years. Data from the most recent 2 years must be highly available and immediately retrievable.  
+Which solution will meet these requirements?
+
+- A. Set up an S3 Lifecycle policy to transition objects to S3 Glacier Deep Archive immediately.
+- B. Set up an S3 Lifecycle policy to transition objects to S3 Glacier Deep Archive after 2 years.
+- C. Use S3 Intelligent-Tiering. Activate the archiving option to ensure that data is archived in S3 Glacier Deep Archive.
+- D. Set up an S3 Lifecycle policy to transition objects to S3 One Zone-Infrequent Access (S3 One Zone-IA) immediately and to S3 Glacier Deep Archive after 2 years.
+
+B
+
+### 127
+A media company is evaluating the possibility of moving its systems to the AWS Cloud. The company needs at least 10 TB of storage with the maximum possible I/O performance for video processing, 300 TB of very durable storage for storing media content, and 900 TB of storage to meet requirements for archival media that is not in use anymore.  
+Which set of services should a solutions architect recommend to meet these requirements?
+
+- A. Amazon EBS for maximum performance, Amazon S3 for durable data storage, and Amazon S3 Glacier for archival storage
+- B. Amazon EBS for maximum performance, Amazon EFS for durable data storage, and Amazon S3 Glacier for archival storage
+- C. Amazon EC2 instance store for maximum performance, Amazon EFS for durable data storage, and Amazon S3 for archival storage
+- D. Amazon EC2 instance store for maximum performance, Amazon S3 for durable data storage, and Amazon S3 Glacier for archival storage
+
+instance store cannot be durable
+THE CORRECT ANSWER IS A. The biggest Instance Store Storage Optimized option (is4gen.8xlarge) has a capacity of only 3TB. https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-store-volumes.html#instance-store-vol-so
+
+The correct Answer is A : Amazon EC2 instance store (Instance Store) is usually not the best choice because the storage it provides is temporary and tied to the life cycle of the instance. When an instance is stopped or terminated, data on the instance store is lost. In this scenario, the company's requirements were to have the maximum possible I/O performance and required durable data storage. Therefore, using Amazon EC2 Instance Store does not meet these requirements because it lacks durability. In contrast, Amazon EBS (Elastic Block Store) provides persistent regional block storage and can meet the needs of high-performance I/O. Therefore, the answer should include Amazon EBS, not Amazon EC2 instance storage.
+
+### 128
+A company wants to run applications in containers in the AWS Cloud. These applications are stateless and can tolerate disruptions within the underlying infrastructure. The company needs a solution that minimizes cost and operational overhead.  
+What should a solutions architect do to meet these requirements?
+
+- A. Use Spot Instances in an Amazon EC2 Auto Scaling group to run the application containers.
+- B. Use Spot Instances in an Amazon Elastic Kubernetes Service (Amazon EKS) managed node group.
+- C. Use On-Demand Instances in an Amazon EC2 Auto Scaling group to run the application containers.
+- D. Use On-Demand Instances in an Amazon Elastic Kubernetes Service (Amazon EKS) managed node group.
+
+B
+
+### 129
+A company is running a multi-tier web application on premises. The web application is containerized and runs on a number of Linux hosts connected to a PostgreSQL database that contains user records. The operational overhead of maintaining the infrastructure and capacity planning is limiting the company's growth. A solutions architect must improve the application's infrastructure.  
+Which combination of actions should the solutions architect take to accomplish this? (Choose two.)
+
+- A. Migrate the PostgreSQL database to Amazon Aurora.
+- B. Migrate the web application to be hosted on Amazon EC2 instances.
+- C. Set up an Amazon CloudFront distribution for the web application content.
+- D. Set up Amazon ElastiCache between the web application and the PostgreSQL database.
+- E. Migrate the web application to be hosted on AWS Fargate with Amazon Elastic Container Service (Amazon ECS).
+
+AE
+
+### 130
+An application runs on Amazon EC2 instances across multiple Availability Zonas. The instances run in an Amazon EC2 Auto Scaling group behind an Application Load Balancer. The application performs best when the CPU utilization of the EC2 instances is at or near 40%.  
+What should a solutions architect do to maintain the desired performance across all instances in the group?
+
+- A. Use a simple scaling policy to dynamically scale the Auto Scaling group.
+- B. Use a ==target tracking policy== to dynamically scale the Auto Scaling group.
+- C. Use an AWS Lambda function ta update the desired Auto Scaling group capacity.
+- D. Use scheduled scaling actions to scale up and scale down the Auto Scaling group.
+B
+
+### 131
+A company is developing a file-sharing application that will use an Amazon S3 bucket for storage. The company wants to serve all the files through an Amazon CloudFront distribution. The company does not want the files to be accessible through direct navigation to the S3 URL.  
+What should a solutions architect do to meet these requirements?
+
+- A. Write individual policies for each S3 bucket to grant read permission for only CloudFront access.
+- B. Create an IAM user. Grant the user read permission to objects in the S3 bucket. Assign the user to CloudFront.
+- C. Write an S3 bucket policy that assigns the CloudFront distribution ID as the Principal and assigns the target S3 bucket as the Amazon Resource Name (ARN).
+- D. Create an origin access identity (OAI). Assign the OAI to the CloudFront distribution. Configure the S3 bucket permissions so that only the OAI has read permission.
+
+I want to restrict access to my Amazon Simple Storage Service (Amazon S3) bucket so that objects can be accessed only through my Amazon CloudFront distribution. How can I do that? Create a CloudFront origin access identity (OAI) https://aws.amazon.com/premiumsupport/knowledge-center/cloudfront-access-to-amazon-s3/
+
+D
+### 132
+
+
+### 150( review all problems )
+
+
