--- a/SAA 101-200.md
+++ b/SAA 101-200.md
@@ -874,15 +874,173 @@ CloudWatch Synthetics canaries is useful for actively monitoring the application
 A
 
 ### 151
-A company wants to migrate its on-premises data center to AWS. According to the company's compliance requirements, the company can use
-only the ap-northeast-3 Region. Company administrators are not permitted to connect VPCs to the internet.
+A company wants to migrate its on-premises data center to AWS. According to the company's compliance requirements, the company can use only the ap-northeast-3 Region. Company administrators are not permitted to connect VPCs to the internet.
 Which solutions will meet these requirements? (Choose two.)
-A. Use AWS Control Tower to implement data residency guardrails to deny internet access and deny access to all AWS Regions except ap-
+
+A. Use [[AWS Control Tower]] to implement data residency guardrails to deny internet access and deny access to all AWS Regions except ap-
 northeast-3.
-B. Use rules in AWS WAF to prevent internet access. Deny access to all AWS Regions except ap-northeast-3 in the AWS account settings.
-C. Use AWS Organizations to configure service control policies (SCPS) that prevent VPCs from gaining internet access. Deny access to all
-AWS Regions except ap-northeast-3.
-D. Create an outbound rule for the network ACL in each VPC to deny all traffic from 0.0.0.0/0. Create an IAM policy for each user to prevent
-the use of any AWS Region other than ap-northeast-3.
+https://aws.amazon.com/jp/about-aws/whats-new/2021/11/aws-control-tower-controls-data-residency-requirements/
+
+B. Use rules in[[ AWS WAF]] to prevent internet access. Deny access to all AWS Regions except ap-northeast-3 in the AWS account settings.
+
+C. Use AWS Organizations to configure service control policies (SCPS) that prevent VPCs from gaining internet access. Deny access to all AWS Regions except ap-northeast-3.
+https://docs.aws.amazon.com/organizations/latest/userguide/orgs_manage_policies_scps_examples_vpc.html#example_vpc_2
+
+D. Create an outbound rule for the [[Network ACL]] in each VPC to deny all traffic from 0.0.0.0/0. Create an IAM policy for each user to prevent the use of any AWS Region other than ap-northeast-3.
+
 E. Use AWS Config to activate managed rules to detect and alert for internet gateways and to detect and alert for new resources deployed
 outside of ap-northeast-3.
+
+AC
+
+### 152
+A company uses a three-tier web application to provide training to new employees. The application is accessed for only 12 hours every day. The company is using an Amazon RDS for MySQL DB instance to store   information and wants to minimize costs. 
+What should a solutions architect do to meet these requirements?
+
+A. Configure an IAM policy for AWS Systems Manager Session Manager. Create an IAM role for the policy. Update the trust relationship of the role. Set up automatic start and stop for the DB instance.
+
+~~B.~~ Create an Amazon ElastiCache for Redis cache cluster that gives users the ability to access the data from the cache when the DB instance
+is stopped. Invalidate the cache after the DB instance is started.
+
+C. Launch an Amazon EC2 instance. Create an IAM role that grants access to Amazon RDS. Attach the role to the EC2 instance. Configure a cron job to start and stop the EC2 instance on the desired schedule.
+
+D. Create AWS Lambda functions to start and stop the DB instance. Create Amazon EventBridge (Amazon CloudWatch Events) scheduled rules to invoke the Lambda functions. Configure the Lambda functions as event targets for the rules.
+
+D
+https://aws.amazon.com/jp/blogs/database/schedule-amazon-rds-stop-and-start-using-aws-lambda/
+
+### 153
+A company sells ringtones created from clips of popular songs. The files containing the ringtones are stored in Amazon S3 Standard and are at least 128 KB in size. The company has millions of files, but downloads are infrequent for ringtones older than 90 days. The company needs to save money on storage while keeping the most accessed files readily available for its users.
+Which action should the company take to meet these requirements MOST cost-effectively?
+
+A. Configure S3 Standard-Infrequent Access (S3 Standard-IA) storage for the initial storage tier of the objects.
+B. Move the files to S3 Intelligent-Tiering and configure it to move objects to a less expensive storage tier after 90 days.
+C. Configure S3 inventory to manage objects and move them to S3 Standard-Infrequent Access (S3 Standard-1A) after 90 days.
+D. Implement an S3 Lifecycle policy that moves the objects from S3 Standard to S3 Standard-Infrequent Access (S3 Standard-1A) after 90 days.
+
+D
+
+why B wrong
+- S3 Intelligent-Tiering is a great choice for **unpredictable access patterns**, but the **company’s pattern is predictable** (older files are less accessed after 90 days).
+- **Lifecycle policies** are **more cost-effective** for predictable scenarios.
+
+### 154
+A company needs to save the results from a medical trial to an Amazon S3 repository. The repository must allow a few scientists to add new files and must restrict all other users to read-only access. No users can have the ability to modify or delete any files in the repository. The company must keep every file in the repository for a minimum of 1 year after its creation date.
+Which solution will meet these requirements?
+A. Use S3 Object Lock in governance mode with a legal hold of 1 year.
+B. Use S3 Object Lock in compliance mode with a retention period of 365 days.
+C. Use an IAM role to restrict all users from deleting or changing objects in the S3 bucket. Use an S3 bucket policy to only allow the IAM role.
+D. Configure the S3 bucket to invoke an AWS Lambda function every time an object is added. Configure the function to track the hash of the saved object so that modified objects can be marked accordingly.
+
+B
+
+Amazon S3 Object Lock
+1. Governance mode - Only users with special permissions can overwrite, delete, or alter object ock settings
+2. Compliance mode - No user, including the root user in an AWS account, can overwrite, delete, or alter object lock settings
+
+### 155
+A large media company hosts a web application on AWS. The company wants to start caching confidential media files so that users around the world will have reliable access to the files. The content is stored in Amazon S3 buckets. The company must deliver the content quickly, regardless of where the requests originate geographically.
+Which solution will meet these requirements?
+A. Use [[AWS DataSync ]]to connect the S3 buckets to the web application.
+B. Deploy [[AWS Global Accelerator]] to connect the S3 buckets to the web application.
+C. Deploy Amazon CloudFront to connect the S3 buckets to CloudFront edge servers.
+D. Use Amazon Simple Queue Service (Amazon SQS) to connect the S3 buckets to the web application.
+
+C - caching
+
+### 156
+A company produces **batch data** that comes from different databases. The company also produces live stream data from network sensors and application APIs. The company needs to consolidate all the data into one place for business analytics. The company needs to process the incoming data and then stage the data in different Amazon S3 buckets. Teams will later run one-time queries and import the data into a business intelligence tool to show key performance indicators (KPIs).
+Which combination of steps will meet these requirements with the LEAST operational overhead? (Choose two.)
+
+A. Use [[Amazon Athena]] for one-time queries. Use [[Amazon QuickSight]] to create dashboards for KPIs.
+B. Use [[Amazon Kinesis#Data Analytics]]  for one-time queries. Use Amazon QuickSight to create dashboards for KPIs.
+C. Create custom AWS Lambda functions to move the individual records from the databases to an [[Amazon Redshift]] cluster.
+D. Use an [[AWS Glue]] extract, transform, and load (ETL) job to convert the data into JSON format. Load the data into multiple[[Amazon OpenSearch]]Service ([[Amazon Elasticsearch]] Service) clusters.
+
+E. Use blueprints in [[AWS Lake Formation]] to identify the data that can be ingested into a data lake. Use AWS Glue to crawl the source, extract
+the data, and load the data into Amazon S3 in Apache Parquet format.
+
+A E
+
+### 157
+A company stores data in an Amazon Aurora PostgreSQL DB cluster. The company must store all the data for 5 years and must delete all the data after 5 years. The company also must indefinitely keep audit logs of actions that are performed within the database. Currently, the company has automated backups configured for Aurora.
+Which combination of steps should a solutions architect take to meet these requirements? (Choose two.)
+A. Take a manual snapshot of the DB cluster.
+B. Create a lifecycle policy for the automated backups.
+C. Configure automated backup retention for 5 years.
+D. Configure an Amazon CloudWatch Logs export for the DB cluster.
+E. Use AWS Backup to take the backups and to keep the backups for 5 years.
+
+(@ These backups will be **retained for 5 years** before they are automatically deleted based on the **retention polic**)
+When Will Old Backups Disappear?
+- Old backups will **disappear automatically** after the **retention period ends** (in this case, **5 years**).
+    - **Example**: If a backup was taken on **October 27, 2024**, it will **expire and be deleted** on **October 27, 2029**.
+- AWS Backup handles the **deletion** automatically according to the **retention policy** you set in the backup plan.
+
+DE
+
+A - Manual task that can be automated, so why make life difficult?
+B - The maximum retention period is 35 days, so would not help
+C - The maximum retention period is 35 days, so would not help
+D - Only option that deals with logs, so makes sense
+E - Partially manual but only option that achieves the 5 year goal
+
+### 158
+A solutions architect is optimizing a website for an upcoming musical event. Videos of the performances will be streamed in real time and then will be available on demand. The event is expected to attract a global online audience.
+Which service will improve the performance of both the real-time and on-demand streaming?
+A. Amazon CloudFront
+B. AWS Global Accelerator
+C. Amazon Route 53
+D. Amazon S3 Transfer Acceleration
+
+A
+website = http = cloudfront
+if it is UDP, then global accelerator
+
+### 159
+A company is running a publicly accessible serverless application that uses [[Amazon API Gateway]] and AWS Lambda. The application’s traffic recently spiked due to fraudulent requests from botnets. 
+Which steps should a solutions architect take to block requests from unauthorized users? (Choose two.)
+A. Create a usage plan with an API key that is shared with genuine users only.
+B. Integrate logic within the Lambda function to ignore the requests from fraudulent IP addresses.
+C. Implement an AWS WAF rule to target malicious requests and trigger actions to filter them out.
+D. Convert the existing public API to a private API. Update the DNS records to redirect users to the new API endpoint.
+E. Create an IAM role for each user attempting to access the API. A user will assume the role when making the API call.
+
+A C 
+A 
+- API Gateway can **generate and manage API keys** to control **who can access the API**.
+- An **API key** is a unique string that identifies authorized users and helps **throttle or rate-limit** their requests via a **usage plan**.
+
+B) no possible for a  publicly accessible application to handle dynamic IP of bots
+C) WAF has bot identification and remedial tools, so it's CORRECT.
+
+**Why option E is problematic**:
+- **IAM roles** are designed for managing **permissions** between AWS services or users within AWS, not for managing public access to APIs.
+- **End-users (e.g., mobile app or web app users)** don’t typically assume IAM roles when making API calls. Instead, API Gateway manages public access with **API keys, Cognito, or IAM policies**.
+- Implementing this approach would **require complex user management** and is **impractical** for large public-facing applications.
+
+### 160
+An ecommerce company hosts its analytics application in the AWS Cloud. The application generates about 300 MB of data each month. The data is stored in JSON format. The company is evaluating a disaster recovery solution to back up the data. The data must be accessible in milliseconds if it is needed, and the data must be kept for 30 days.
+Which solution meets these requirements MOST cost-effectively?
+A. Amazon OpenSearch Service (Amazon Elasticsearch Service)
+B. Amazon S3 Glacier
+C. Amazon S3 Standard
+D. Amazon RDS for PostgreSQL
+
+C
+Cost-effective solution with milliseconds of retrieval -> it should be s3 standard
+
+### 161
+A company has a small Python application that processes JSON documents and outputs the results to an on-premises SQL database. The application runs thousands of times each day. The company wants to move the application to the AWS Cloud. The company needs a highly available solution that maximizes scalability and minimizes operational overhead.
+Which solution will meet these requirements?
+
+A. Place the JSON documents in an Amazon S3 bucket. Run the Python code on multiple Amazon EC2 instances to process the documents.
+Store the results in an Amazon Aurora DB cluster.
+B. Place the JSON documents in an Amazon S3 bucket. Create an AWS Lambda function that runs the Python code to process the documents
+as they arrive in the S3 bucket. Store the results in an Amazon Aurora DB cluster.
+C. Place the JSON documents in an Amazon Elastic Block Store (Amazon EBS) volume. Use the EBS Multi-Attach feature to attach the volume
+to multiple Amazon EC2 instances. Run the Python code on the EC2 instances to process the documents. Store the results on an Amazon RDS
+DB instance.
+D. Place the JSON documents in an Amazon Simple Queue Service (Amazon SQS) queue as messages. Deploy the Python code as a container
+on an Amazon Elastic Container Service (Amazon ECS) cluster that is configured with the Amazon EC2 launch type. Use the container to
+process the SQS messages. Store the results on an Amazon RDS DB instance.
